Removing extra space on nav and work filters modal per issue #66

--- a/assets/styles/components/_nav.scss
+++ b/assets/styles/components/_nav.scss
@@ -23,7 +23,6 @@ body.nav-open {
   border-top: 5px solid color('white');
   border-left: 5px solid color('white');
   border-right: 5px solid color('white');
-  border-bottom: 64px solid color('white');
   padding: #{$header-sm + $padding-sm} $padding-sm $padding-md;
 
   ul {
