--- a/assets/styles/pages/_work.scss
+++ b/assets/styles/pages/_work.scss
@@ -11,7 +11,6 @@ body.page-work {
     height: calc(100% - #{$header-sm});
     border-left: 5px solid color('white');
     border-right: 5px solid color('white');
-    border-bottom: beat(4) solid color('white');
 
     .services-nav {
       @extend %semantic-list;
